--- a/container/08_events/three.html
+++ b/container/08_events/three.html
@@ -11,12 +11,29 @@
     <button id="stop">Stop</button>
 </body>
 <script>
-    const sayDate = function(str){
-        console.log(str, Date.now());
-    }
-    const intervalId = setInterval(sayDate,1000, "hi")
+    // const sayDate = function(str){
+    //     console.log(str, Date.now());
+    // }
+    // const intervalId = setInterval(sayDate,1000, "hi")
 
-    clearInterval(intervalId)
+    let intervalId;
+    const startprint = function (){ 
+        function sayDate(){
+        console.log("Hello", Date.now());
+
+    }
+     intervalId = setInterval(sayDate,1000, "hi")
+}
+    
+
+    const stopprint = function (){
+        clearInterval(intervalId);
+        console.log('stopped');
+    }
+
+    document.querySelector('#start').addEventListener('click', startprint);
+    document.querySelector('#stop').addEventListener('click', stopprint);
+
 </script>
 
 </html>
