--- a/container/08_events/two.html
+++ b/container/08_events/two.html
@@ -14,7 +14,8 @@
         console.log("Hitesh");
     }
 
-    const changeText = function(){ document.querySelector('h1').innerHTML = "best Js series"}
+    const changeText = function(){ 
+        document.querySelector('h1').innerHTML = "best Js series"}
    
     // setTimeout(sayHitesh, 2000) // provide only refrence
     const changeMe = setTimeout(changeText, 2000)
